tests/codegen/fail/unsupported_cleanup_closure_value_build.ql
extern "c" fn first()

fn main() -> Int {
    defer first()
    let capture = () => 1
    return 0
}
